[package]
name = "wasi-crypto-example"
version = "0.1.0"
edition = "2021"

[dependencies]
const-oid = { version = "0.9.0", features = ["db"] }
der = { version = "0.6.0", features = ["std"] }
elliptic-curve = { version = "0.12", features = ["arithmetic", "std"] }
sec1 = { version = "0.3.0", features = ["std"] }
spki = { version = "0.6.0" }
wasi-crypto-guest = { path = "wasi-crypto/implementations/bindings/rust" }
x509 = { version = "0.1.0", features = ["std"], package = "x509-cert" }